bug fixes regarding width of create section & necessary gap below objects

--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,12 +1,42 @@
 .welcome {
     display: flex;
-    margin-top: 7em;
+    margin-top: 4em;
     flex-wrap: wrap;
 }
 
 @media (max-width: 761px) {
     .welcome {
-        margin-top: 3em;
+        margin-top: 1em;
+    }
+
+    .card-create-guides.dark {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+
+    .card-create-guides.light {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+
+    .card-always-free.dark {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+
+    .card-always-free.light {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+
+    .card-new-guides.dark {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+
+    .card-new-guides.light {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
     }
 }
 
@@ -154,4 +184,7 @@ h2 {
     transform: scale(1.05)
 }
 
-
+.white-space {
+    display: flex;
+    flex-direction: column;
+}
